@@ -546,7 +546,16 @@ NTSTATUS udefrag_fopen(winx_file_info *f,HANDLE *phFile)
 	
 	RtlInitUnicodeString(&us,f->path);
 	InitializeObjectAttributes(&oa,&us,0,NULL,NULL);
-	status = NtCreateFile(phFile,FILE_GENERIC_READ | SYNCHRONIZE,
+	/*
+	* Don't specify anything in addition
+	* to a SYNCHRONIZE access right, otherwise
+	* you will not be able to defragment $Mft
+	* as well as other internal NTFS files
+	* on Windows XP and Windows Server 2003 systems.
+	* A single SYNCHRONIZE flag also enables internal
+	* NTFS files defragmentation on Windows 2000.
+	*/
+	status = NtCreateFile(phFile,/*FILE_GENERIC_READ |*/ SYNCHRONIZE,
 				&oa,&iosb,NULL,0,FILE_SHARE_READ | FILE_SHARE_WRITE,
 				FILE_OPEN,flags,NULL,0);
 	return status;
